package br.unitins.topicos1.domain.model.enums;

public enum StatusCompra {
    AGUARDANDO_PAGAMENTO,
    EM_ANALISE,
    PAGAMENTO_APROVADO,
    PAGAMENTO_NEGADO,
    CANCELADO,
    PAGAMENTO_PARCIAL,
    PAGAMENTO_FINALIZADO
}
