package br.unitins.topicos1.domain.model.enums;

public enum StatusPagamento {
    PENDENTE,
    APROVADO,
    NEGADO,
    ESTORNADO,
    ATRASO,
    EM_ANALISE,
    PAGAMENTO_PARCIAL,
}
