package br.unitins.topicos1.domain.model.enums;

public enum StatusParcela {
    PENDENTE,
    PAGO,
    ATRASADO,
    CANCELADO
}