package br.unitins.topicos1.domain.model.enums;

public enum StatusPerfil {
    INATIVO,
    INCOMPLETO,
    COMPLETO
}
