package br.unitins.topicos1.domain.model.enums;

public enum StatusReembolso {
    SOLICITADO,
    APROVADO,
    RECUSADO,
    PROCESSANDO,
    CONCLUIDO,
    CANCELADO;
}
